add menu animation and disclaimer

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.js",
-    "test": "jest --coverage --watch"
+    "test": "jest --watch"
   },
   "author": "",
   "license": "ISC",
