--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.js",
+    "build": "parcel build index.js --out-dir public",
     "test": "jest --watch"
   },
   "author": "",
@@ -34,6 +34,22 @@
     "enzyme": "^3.5.0",
     "enzyme-adapter-react-16": "^1.3.1",
     "jest": "^23.5.0",
-    "parcel-bundler": "^1.9.7"
-  }
+    "parcel-bundler": "^1.9.7",
+    "parcel-plugin-sw-cache": "^0.2.6"
+  },
+  "cache": {
+    "inDev": true,
+    "strategy": "default"
+  },
+  "headers": [
+    {
+      "source": "**",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "max-age=0"
+        }
+      ]
+    }
+  ]
 }
