--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-notifications": "^1.4.3",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-simple-keyboard": "^1.3.16",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.3",
