--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "material-icons": "^0.2.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-notifications": "^1.4.3",
@@ -25,7 +26,8 @@
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.3",
-    "styled-components": "^3.4.5"
+    "styled-components": "^3.4.5",
+    "typeface-roboto": "0.0.54"
   },
   "devDependencies": {
     "babel-jest": "^23.4.2",
